--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-
+############# Database Properties ###########################################
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/${DEV_DB_NAME}?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&characterEncoding=UTF-8
+spring.datasource.username=${DEV_DB_USER}
+spring.datasource.password=${DEV_DB_PASS}
+spring.datasource.initSQL=SET NAMES 'utf8mb4'
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+hibernate.connection.characterEncoding=UTF-8
+spring.datasource.initialize=true
+spring.jpa.show-sql=false
+spring.http.encoding.charset=UTF-8
