Add Swagger documentation

--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -11,3 +11,7 @@ hibernate.connection.characterEncoding=UTF-8
 spring.datasource.initialize=true
 spring.jpa.show-sql=false
 spring.http.encoding.charset=UTF-8
+
+
+springdoc.swagger-ui.path=/documentation.html
+springdoc.swagger-ui.operationsSorter=method
