Clean up the code in backEnd. Add reminder colum to task

--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -13,5 +13,7 @@ spring.jpa.show-sql=false
 spring.http.encoding.charset=UTF-8
 
 
+JWT_REFRESH_EXPIRATION_TIME=1800000
+JWT_ACCESS_EXPIRATION_TIME=600000
 springdoc.swagger-ui.path=/documentation.html
 springdoc.swagger-ui.operationsSorter=method
