Clean up the code

--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -12,8 +12,14 @@ spring.datasource.initialize=true
 spring.jpa.show-sql=false
 spring.http.encoding.charset=UTF-8
 
+############# JWT Properties #############
+### 2 hours
+JWT_REFRESH_EXPIRATION_TIME=7200
+### 10 minutes
+JWT_ACCESS_EXPIRATION_TIME=600
+JWT_ACCESS_TOKEN_SECRET=ACCESS_TOKEN_SECRET
+JWT_REFRESH_TOKEN_SECRET=REFRESH_TOKEN_SECRET
 
-JWT_REFRESH_EXPIRATION_TIME=1800000
-JWT_ACCESS_EXPIRATION_TIME=600000
+############# SWAGGER Properties #############
 springdoc.swagger-ui.path=/documentation.html
 springdoc.swagger-ui.operationsSorter=method
